[package]
name = "aw"
version = "0.1.0"
authors = [ "tickbh <tickdream125@hotmail.com>", "Захаров Константин Иванович <konstantin_1987@mail.ru>" ]
description = "AW (A Wrapper) is a zero-cost high-level lua 5.3 wrapper for Rust. Some fixes for td_rlua."
repository = "https://github.com/yuulive/aw"
license = "MIT/Apache-2.0"
keywords = ["lua", "wrapper"]

[dependencies]
libc = "0.2"
td_clua = "0.1.2"
